cluster/ingress/external-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-svc-bridge
spec:
  type: ExternalName
  externalName: kubernetes-dashboard.kube-system
