cluster/ingress/ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-test-minion
    annotations:
      nginx.org/mergeable-ingress-type: "minion"
spec:
  tls:
    - hosts:
        - test.gawn.dev
      secretName: cloudflare-origin-cert
  rules:
    - host: test.gawn.dev
      http:
        paths: 
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gohelloworld
                port:
                  name: http
